# Custom_Gx

./: .gitignore  Connect.ipynb
Github_setup/: buildspec.yml  requirements-dev.txt  setup.py
custom_Expectations/: cust_try.py  last_ingested.py  try.py
src/: DataValidationContext.py  Expectations.py  RunLoadExpectations.py
src/.ipynb_checkpoints/: BatchRequest-checkpoint.py  DataValidationContext-checkpoint.py  Expectations-checkpoint.py  RunLoadExpecations-checkpoint.py
temp/libs/ge/great_expectations-0.15.14/: PKG-INFO  setup.cfg
temp/libs/ge/great_expectations-0.15.14/great_expectations/: _version.py
temp/libs/ge/great_expectations-0.15.14/great_expectations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
temp/libs/ge/great_expectations-0.17.11/: PKG-INFO  setup.cfg  setup.py
temp/libs/ge/great_expectations-0.17.11/great_expectations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
temp/libs/ge/great_expectations-0.18.3/: PKG-INFO  setup.cfg
temp/libs/ge/great_expectations-0.18.3/great_expectations/: _version.py
temp/libs/ge/great_expectations-0.18.3/great_expectations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
