[easy_install]

[bdist_wheel]
universal = 0

[versioneer]
vcs = git
style = pep440
versionfile_source = great_expectations/_version.py
versionfile_build = great_expectations/_version.py
tag_prefix = 
parentdir_prefix = great_expectations-

[options]
python_requires = >=3.8

[egg_info]
tag_build = 
tag_date = 0

